...
import UIKit
import Cosmos
import JGProgressHUD

class ViewController: UIViewController {
  
  @IBOutlet weak var movieNameLabel: UILabel!
  @IBOutlet weak var movieImage: UIImageView!
  @IBOutlet weak var cosmosView: CosmosView!
  @IBOutlet var searchBar: UISearchBar!
  let networkManager = NetworkManager()
  let hud = JGProgressHUD(style: .dark)
  
  override func viewDidLoad() {
    super.viewDidLoad()
    // Do any additional setup after loading the view.
    networkManager.delegate = self
    searchBar.placeholder = "Search for movies"
    searchBar.delegate = self
    searchBar.showsCancelButton = true
    navigationItem.titleView = searchBar
  }
  
  func convertIMBDRating(rating: Double) -> Double {
...
