//
//  OviaHealthProjectUITests.swift
//  OviaHealthProjectUITests
//
//  Created by Ishaan Gupta 2 on 2/18/21.
//

import XCTest

class OviaHealthProjectUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
  
  func test_movie_not_found_label_is_working() throws {
    let app = XCUIApplication()
    app.activate()
    let searchForMoviesSearchField = app.navigationBars["OviaHealthProject.View"].searchFields["Search for movies"]
    XCTAssertTrue(searchForMoviesSearchField.exists)
    searchForMoviesSearchField.tap()
    searchForMoviesSearchField.typeText("fshkjdfksj")
    app/*@START_MENU_TOKEN@*/.buttons["Search"]/*[[".keyboards",".buttons[\"search\"]",".buttons[\"Search\"]"],[[[-1,2],[-1,1],[-1,0,1]],[[-1,2],[-1,1]]],[0]]@END_MENU_TOKEN@*/.tap()
    let movieLabel = app.staticTexts["movieNameLabel"]
    let exp = expectation(for: NSPredicate(format: "label == 'Movie not found'"), evaluatedWith: movieLabel, handler: nil)
    wait(for: [exp], timeout: 5)
  }
}


